--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
  
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> <a href="mailto:samirpaulb@gmail.com"> samirpaulb@gmail.com </a> </li>
-                <li><i class="icofont-rounded-right"></i> <strong>Linkedin:</strong> <a href="https://www.linkedin.com/in/samirpaul">www.linkedin.com/in/samirpaul</a></li>
-                <li><i class="icofont-rounded-right"></i> <strong>GitHub:</strong> <a href="https://github.com/SamirPaul1">https://github.com/SamirPaul1</a> </li>
+                <li><i class="icofont-rounded-right"></i> <strong>Linkedin:</strong> <a href="https://www.linkedIn.com/in/samirpaul"> linkedin.com/in/samirpaul</a></li>
+                <li><i class="icofont-rounded-right"></i> <strong>GitHub:</strong> <a href="https://github.com/SamirPaul1"> github.com/SamirPaul1</a> </li>
                                     
                 <li>
                   Hardworking individual with teamwork abilities and
